--- a/css/section.css
+++ b/css/section.css
@@ -1,33 +1,21 @@
-.section__header {
-    margin: 0;
-    background-color: white;
-    font-weight: bold;
-    padding: 20px;
-    border-bottom: 1px solid lightgray;
-}
-
-.section__header--list {
-    margin: 0;
-    padding: 0;
-}
-
-.section__container {
-    display: grid;
-    grid-template-columns: 1fr auto;
-    background-color: white;
-    padding: 20px;
-    border-bottom: 1px solid lightgray;
-}
-
-.section__button {
-    padding: 10px;
-    background-color: teal;
-    color: white;
-    border: none;
-}
-
-.section__button:hover {
-    transform: scale(1.05);
-    transition: 0.5s;
-    background-color: hsl(180, 100%, 30%);
-}
+    .section__title {
+        margin: 0;
+        background-color: white;
+        font-weight: bold;
+        padding: 20px;
+        border-bottom: 1px solid lightgray;
+    }
+    
+    .section__title--list {
+        margin: 0;
+        padding: 0;
+    }
+    
+    .section__header {
+        display: grid;
+        grid-template-columns: auto auto;
+        justify-content: space-between;
+        background-color: white;
+        padding: 20px;
+        border-bottom: 1px solid lightgray;
+    }
