--- a/css/section.css
+++ b/css/section.css
@@ -5,6 +5,10 @@
         font-weight: bold;
         border-bottom: 1px solid lightgray;
     }
+
+    .section__title--list {
+        margin: 0;
+    }
     
     .section__header {
         display: grid;
@@ -12,4 +16,15 @@
         justify-content: space-between;
         background-color: white;
         border-bottom: 1px solid lightgray;
+        padding: 20px;
+    }
+
+    @media (max-width: 767px) {
+        .section__header {
+            grid-template-columns: 1fr;
+            grid-gap: 10px;
+        }
+        .section__title--list {
+            text-align: center;
+        }
     }
